--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/**/*.spec.ts",
+    "src/mocks.ts",
+    "src/test.ts",
+    "src/polyfills.ts",
+    "src/tsconfig.test.json.json",
+    "src/tsconfig.json"
   ],
   "compileOnSave": false,
   "atom": {
