--- a/package.json
+++ b/package.json
@@ -12,44 +12,42 @@
     "lint": "node ./node_modules/tslint/bin/tslint -c ./tslint.json ./src/**/*.ts --force"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.7",
+    "@angular/common": "2.4.10",
+    "@angular/compiler": "2.4.10",
+    "@angular/compiler-cli": "2.4.10",
+    "@angular/core": "2.4.10",
+    "@angular/forms": "2.4.10",
+    "@angular/http": "2.4.10",
+    "@angular/platform-browser": "2.4.10",
+    "@angular/platform-browser-dynamic": "2.4.10",
+    "@angular/platform-server": "2.4.10",
+    "@ionic/storage": "2.0.1",
     "angular2-jwt": "^0.1.27",
-    "auth0-js": "^8.2.0",
-    "auth0-lock": "^10.11.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.8.1",
     "ionic2-input-mask": "^0.18.6",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.6.26"
+    "rxjs": "5.2.0",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@angular/cli": "^1.0.0-rc.2",
+    "@ionic/app-scripts": "1.1.4",
     "@types/jasmine": "^2.5.41",
     "@types/node": "^7.0.5",
-    "angular-cli": "^1.0.0-beta.28.3",
-    "codecov": "^1.0.1",
+    "codecov": "^2.1.0",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.2",
-    "karma-remap-istanbul": "^0.5.0",
+    "karma-remap-istanbul": "^0.6.0",
     "ts-node": "^2.0.0",
     "tslint": "^4.4.2",
     "tslint-eslint-rules": "^3.3.0",
-    "typescript": "2.2.0"
+    "typescript": "2.2.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
