--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "test": "ng test",
-    "lint": "node ./node_modules/tslint/bin/tslint -c ./tslint.json ./src/**/*.ts --force"
+    "lint": "node ./node_modules/tslint/bin/tslint -c ./tslint.json ./src/**/*.ts --force --fix"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
