--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@ionic-native/in-app-browser": "^3.4.4",
     "@ionic/storage": "1.1.7",
     "angular2-jwt": "^0.1.27",
-    "auth0-js": "^8.2.0",
-    "auth0-lock": "^10.11.0",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.8.1",
     "ionic2-input-mask": "^0.18.6",
