--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@ionic-native/deeplinks": "^3.4.4",
     "@ionic-native/in-app-browser": "^3.4.4",
+    "@ionic-native/toast": "^3.4.4",
     "@ionic/storage": "1.1.7",
     "angular2-jwt": "^0.1.27",
     "ionic-angular": "2.2.0",
